; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-address-pool.c_address_pool_new_from_string.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-address-pool.c_address_pool_new_from_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.in_addr_union = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @address_pool_new_from_string(i8* %0, i32** %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %union.in_addr_union, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32** %1, i32*** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @assert(i8* %14)
  %16 = load i32**, i32*** %8, align 8
  %17 = bitcast i32** %16 to i8*
  %18 = call i32 @assert(i8* %17)
  %19 = load i8*, i8** %10, align 8
  %20 = call i32 @assert(i8* %19)
  %21 = load i32, i32* %9, align 4
  %22 = load i8*, i8** %10, align 8
  %23 = call i32 @in_addr_from_string(i32 %21, i8* %22, %union.in_addr_union* %12)
  store i32 %23, i32* %13, align 4
  %24 = load i32, i32* %13, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %5
  %27 = load i32, i32* %13, align 4
  store i32 %27, i32* %6, align 4
  br label %34

28:                                               ; preds = %5
  %29 = load i8*, i8** %7, align 8
  %30 = load i32**, i32*** %8, align 8
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %11, align 4
  %33 = call i32 @address_pool_new(i8* %29, i32** %30, i32 %31, %union.in_addr_union* %12, i32 %32)
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %28, %26
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @in_addr_from_string(i32, i8*, %union.in_addr_union*) #1

declare dso_local i32 @address_pool_new(i8*, i32**, i32, %union.in_addr_union*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
